--- a/application/package.json
+++ b/application/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.20.5",
     "vite-express": "^0.21.1"
