--- a/application/package.json
+++ b/application/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
+    "openai": "^5.23.1",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
